test_regress/t/t_enum_type_methods_bad.out
%Error: Internal Error: t/t_enum_type_methods_bad.v:24:14: ../V3Width.cpp:#: Unsupported: enum next/prev with non-const argument
                                                         : ... In instance t
   24 |       e.next(increment);
      |              ^~~~~~~~~
                        ... See the manual at https://verilator.org/verilator_doc.html for more assistance.
